# bayreg

./: pyproject.toml  requirements.txt
bayreg/: bayvar.py  hierarchical_model.py  linear_model.py  linear_regression.py
bayreg/linear_algebra/: array_checks.py  array_operations.py
bayreg/model_assessment/: in_sample_fit.py  performance.py  residual_diagnostics.py
bayreg/transformations/: data_utils.py  kernels.py
