[tool.poetry]
name = "bayreg"
version = "0.1.3"
description = ""
authors = ["Devin D. Garcia"]
license = "BSD 3-Clause"
#readme = "README.md"
keywords = ["bayesian", "regression", "conjugate", "linear"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
scipy = "^1.11.1"
scikit-learn = "^1.2.1"
numpy = "^1.25.0"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

