[tool.poetry]
name = "bayreg"
version = "0.2"
description = ""
authors = ["Devin D. Garcia"]
license = "BSD 3-Clause"
#readme = "README.md"
keywords = ["bayesian", "regression", "conjugate", "linear"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scikit-learn = ">=1.2.1"
numpy = ">=1.25.0,<=2.0.0"
pandas = ">=1.9, <=2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

